--- a/ExtentReports/index.html
+++ b/ExtentReports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">DEMOQA Reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">sept 22, 2023 11:27:18 a. m.</span></a>
+<a href="#"><span class="badge badge-primary">sept 22, 2023 12:07:30 p. m.</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">booksStoreE2E</p>
             <p class="text-sm">
-              <span>11:27:33</span> / <span>00:00:31:566</span>
+              <span>12:07:46</span> / <span>00:00:43:088</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">booksStoreE2E</h5>
-<span class='badge badge-success'>09.22.2023 11:27:33</span>
-<span class='badge badge-danger'>09.22.2023 11:28:04</span>
-<span class='badge badge-default'>00:00:31:566</span>
+<span class='badge badge-success'>09.22.2023 12:07:46</span>
+<span class='badge badge-danger'>09.22.2023 12:08:29</span>
+<span class='badge badge-default'>00:00:43:088</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,14 +104,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:27:33</td>
+        <td>12:07:46</td>
         <td>
           booksStoreE2E has started execution
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:28:04</td>
+        <td>12:08:29</td>
         <td>
           booksStoreE2E got successfully executed
         </td>
@@ -128,7 +128,7 @@
           <div class="test-detail">
             <p class="name">booksStoreE2E</p>
             <p class="text-sm">
-              <span>11:27:33</span> / <span>00:00:36:426</span>
+              <span>12:07:46</span> / <span>00:00:29:139</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -137,9 +137,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">booksStoreE2E</h5>
-<span class='badge badge-success'>09.22.2023 11:27:33</span>
-<span class='badge badge-danger'>09.22.2023 11:28:09</span>
-<span class='badge badge-default'>00:00:36:426</span>
+<span class='badge badge-success'>09.22.2023 12:07:46</span>
+<span class='badge badge-danger'>09.22.2023 12:08:16</span>
+<span class='badge badge-default'>00:00:29:139</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -151,14 +151,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:27:33</td>
+        <td>12:07:46</td>
         <td>
           booksStoreE2E has started execution
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:28:09</td>
+        <td>12:08:16</td>
         <td>
           booksStoreE2E got successfully executed
         </td>
@@ -175,7 +175,7 @@
           <div class="test-detail">
             <p class="name">booksStoreE2E</p>
             <p class="text-sm">
-              <span>11:27:33</span> / <span>00:00:26:917</span>
+              <span>12:07:47</span> / <span>00:00:48:825</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -184,9 +184,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">booksStoreE2E</h5>
-<span class='badge badge-success'>09.22.2023 11:27:33</span>
-<span class='badge badge-danger'>09.22.2023 11:28:00</span>
-<span class='badge badge-default'>00:00:26:917</span>
+<span class='badge badge-success'>09.22.2023 12:07:47</span>
+<span class='badge badge-danger'>09.22.2023 12:08:36</span>
+<span class='badge badge-default'>00:00:48:825</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -198,14 +198,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:27:33</td>
+        <td>12:07:47</td>
         <td>
           booksStoreE2E has started execution
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:28:00</td>
+        <td>12:08:36</td>
         <td>
           booksStoreE2E got successfully executed
         </td>
@@ -229,13 +229,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>sept 22, 2023 11:27:18 a. m.</h3>
+<h3>sept 22, 2023 12:07:30 p. m.</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>sept 22, 2023 11:28:13 a. m.</h3>
+<h3>sept 22, 2023 12:08:39 p. m.</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -305,7 +305,7 @@
 </div></div>
 <script>
 var timeline = {
-"booksStoreE2E":31.566,"booksStoreE2E":36.426,"booksStoreE2E":26.917
+"booksStoreE2E":43.088,"booksStoreE2E":29.139,"booksStoreE2E":48.825
 };
 </script>
 <div class="row">
