deploy: 3a6a108d38083fb3a68b4b5e0cc8b73b47659b07

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">DEMOQA Reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 22, 2023 02:33:59 PM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 22, 2023 03:11:48 PM</span></a>
 </li>
 </ul>
 </div>
@@ -87,7 +87,7 @@
           <div class="test-detail">
             <p class="name">booksStoreE2E</p>
             <p class="text-sm">
-              <span>2:34:15 PM</span> / <span>00:00:18:284</span>
+              <span>3:12:05 PM</span> / <span>00:00:13:163</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -96,9 +96,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">booksStoreE2E</h5>
-<span class='badge badge-success'>09.22.2023 2:34:15 PM</span>
-<span class='badge badge-danger'>09.22.2023 2:34:33 PM</span>
-<span class='badge badge-default'>00:00:18:284</span>
+<span class='badge badge-success'>09.22.2023 3:12:05 PM</span>
+<span class='badge badge-danger'>09.22.2023 3:12:18 PM</span>
+<span class='badge badge-default'>00:00:13:163</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -110,14 +110,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>2:34:15 PM</td>
+        <td>3:12:05 PM</td>
         <td>
           booksStoreE2E has started execution
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:34:33 PM</td>
+        <td>3:12:18 PM</td>
         <td>
           booksStoreE2E got successfully executed
         </td>
@@ -134,7 +134,7 @@
           <div class="test-detail">
             <p class="name">booksStoreE2E</p>
             <p class="text-sm">
-              <span>2:34:15 PM</span> / <span>00:00:11:783</span>
+              <span>3:12:05 PM</span> / <span>00:00:08:531</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -143,9 +143,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">booksStoreE2E</h5>
-<span class='badge badge-success'>09.22.2023 2:34:15 PM</span>
-<span class='badge badge-danger'>09.22.2023 2:34:27 PM</span>
-<span class='badge badge-default'>00:00:11:783</span>
+<span class='badge badge-success'>09.22.2023 3:12:05 PM</span>
+<span class='badge badge-danger'>09.22.2023 3:12:14 PM</span>
+<span class='badge badge-default'>00:00:08:531</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -161,14 +161,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>2:34:15 PM</td>
+        <td>3:12:05 PM</td>
         <td>
           booksStoreE2E has started execution
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>2:34:27 PM</td>
+        <td>3:12:13 PM</td>
         <td>
           <textarea readonly class="code-block">org.openqa.selenium.StaleElementReferenceException: stale element reference: stale element not found
   (Session info: chrome=117.0.5938.92)
@@ -176,10 +176,10 @@ For documentation on this error, please visit: https://www.selenium.dev/document
 Build info: version: '4.12.0', revision: '249f2a7d1b*'
 System info: os.name: 'Linux', os.arch: 'amd64', os.version: '6.2.0-1011-azure', java.version: '20.0.2'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [fa5349d61b1bdd3ca2dd4534f89558d8, clickElement {id=A480F4091625A3DDEF802C607B85E80D_element_88}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 117.0.5938.92, chrome: {chromedriverVersion: 117.0.5938.88 (be6afae47212..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:36503}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:36503/devtoo..., se:cdpVersion: 117.0.5938.92, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on linux (fa5349d61b1bdd3ca2dd4534f89558d8)] -> xpath: //div[@class='action-buttons']/child::span]
-Session ID: fa5349d61b1bdd3ca2dd4534f89558d8
+Command: [2adac9db43084f08d5823d2b0909feac, clickElement {id=3829ED757ED5637AFB3C853D9DB73B3E_element_148}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 117.0.5938.92, chrome: {chromedriverVersion: 117.0.5938.88 (be6afae47212..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:40937}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:40937/devtoo..., se:cdpVersion: 117.0.5938.92, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on linux (2adac9db43084f08d5823d2b0909feac)] -> xpath: //a[contains(text(),"You Don't Know JS")]]
+Session ID: 2adac9db43084f08d5823d2b0909feac
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:67)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
 	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:484)
@@ -192,9 +192,9 @@ Session ID: fa5349d61b1bdd3ca2dd4534f89558d8
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
 	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
 	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
-	at com.demoqa.base.BaseClass.clickElement(BaseClass.java:352)
-	at com.demoqa.pages.bookStore.BooksStorePage.selectBooks(BooksStorePage.java:24)
-	at com.demoqa.test.bookStore.BookStoreTest.booksStoreE2E(BookStoreTest.java:36)
+	at com.demoqa.base.BaseClass.click(BaseClass.java:332)
+	at com.demoqa.pages.bookStore.BooksStorePage.selectBooks(BooksStorePage.java:23)
+	at com.demoqa.test.bookStore.BookStoreTest.booksStoreE2E(BookStoreTest.java:30)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:578)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
@@ -224,7 +224,7 @@ Session ID: fa5349d61b1bdd3ca2dd4534f89558d8
           <div class="test-detail">
             <p class="name">booksStoreE2E</p>
             <p class="text-sm">
-              <span>2:34:16 PM</span> / <span>00:00:28:204</span>
+              <span>3:12:25 PM</span> / <span>00:00:08:633</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -233,9 +233,9 @@ Session ID: fa5349d61b1bdd3ca2dd4534f89558d8
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">booksStoreE2E</h5>
-<span class='badge badge-success'>09.22.2023 2:34:16 PM</span>
-<span class='badge badge-danger'>09.22.2023 2:34:44 PM</span>
-<span class='badge badge-default'>00:00:28:204</span>
+<span class='badge badge-success'>09.22.2023 3:12:25 PM</span>
+<span class='badge badge-danger'>09.22.2023 3:12:34 PM</span>
+<span class='badge badge-default'>00:00:08:633</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -251,27 +251,40 @@ Session ID: fa5349d61b1bdd3ca2dd4534f89558d8
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>2:34:16 PM</td>
+        <td>3:12:25 PM</td>
         <td>
           booksStoreE2E has started execution
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>2:34:44 PM</td>
+        <td>3:12:34 PM</td>
         <td>
-          <textarea readonly class="code-block">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for alert to be present (tried for 15 second(s) with 500 milliseconds interval)
+          <textarea readonly class="code-block">org.openqa.selenium.StaleElementReferenceException: stale element reference: stale element not found
+  (Session info: chrome=117.0.5938.92)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#stale-element-reference-exception
 Build info: version: '4.12.0', revision: '249f2a7d1b*'
 System info: os.name: 'Linux', os.arch: 'amd64', os.version: '6.2.0-1011-azure', java.version: '20.0.2'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 117.0.5938.92, chrome: {chromedriverVersion: 117.0.5938.88 (be6afae47212..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:45545}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:45545/devtoo..., se:cdpVersion: 117.0.5938.92, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 50169142472e23ab3878dbc42a3bf029
-	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:230)
-	at com.demoqa.base.BaseClass.acceptCommonAlert(BaseClass.java:425)
-	at com.demoqa.pages.bookStore.BooksStorePage.acceptAlert(BooksStorePage.java:42)
-	at com.demoqa.pages.bookStore.BooksStorePage.selectBooks(BooksStorePage.java:26)
-	at com.demoqa.test.bookStore.BookStoreTest.booksStoreE2E(BookStoreTest.java:36)
+Command: [e4a2a13be17dff666159a2bbd40d0f6c, clickElement {id=341068E99DEF2E2279B851FCA1F44CEC_element_174}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 117.0.5938.92, chrome: {chromedriverVersion: 117.0.5938.88 (be6afae47212..., userDataDir: /tmp/.org.chromium.Chromium...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:36001}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: linux, proxy: Proxy(), se:cdp: ws://localhost:36001/devtoo..., se:cdpVersion: 117.0.5938.92, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on linux (e4a2a13be17dff666159a2bbd40d0f6c)] -> xpath: //a[contains(text(),"You Don't Know JS")]]
+Session ID: e4a2a13be17dff666159a2bbd40d0f6c
+	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:67)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:484)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
+	at com.demoqa.base.BaseClass.click(BaseClass.java:332)
+	at com.demoqa.pages.bookStore.BooksStorePage.selectBooks(BooksStorePage.java:23)
+	at com.demoqa.test.bookStore.BookStoreTest.booksStoreE2E(BookStoreTest.java:30)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:578)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
@@ -307,55 +320,22 @@ Session ID: 50169142472e23ab3878dbc42a3bf029
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">2</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
 </div>
 <div class="test-list-wrapper scrollable">
 <ul class="test-list-item">
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log badge-danger'>1</span>
-</span>
-<p class="name">org.openqa.selenium.TimeoutException</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>org.openqa.selenium.TimeoutException</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>14:34:16 PM</td>
-<td>
-<a href="#" class="linked" test-id='3' id='3'>booksStoreE2E</a>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log badge-danger'>1</span>
+<span class='badge log badge-danger'>2</span>
 </span>
 <p class="name">org.openqa.selenium.StaleElementReferenceException</p>
-<p class="duration text-sm">1 tests</p>
+<p class="duration text-sm">2 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
 <h4>org.openqa.selenium.StaleElementReferenceException</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
+<span status="fail" class='badge log badge-danger'>2 failed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -368,9 +348,16 @@ Session ID: 50169142472e23ab3878dbc42a3bf029
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>14:34:15 PM</td>
+<td>15:12:05 PM</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>booksStoreE2E</a>
+</td>
+</tr>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>15:12:25 PM</td>
+<td>
+<a href="#" class="linked" test-id='3' id='3'>booksStoreE2E</a>
 </td>
 </tr>
 </tbody>
@@ -390,13 +377,13 @@ Session ID: 50169142472e23ab3878dbc42a3bf029
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 22, 2023 02:33:59 PM</h3>
+<h3>Sep 22, 2023 03:11:48 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 22, 2023 02:34:47 PM</h3>
+<h3>Sep 22, 2023 03:12:37 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -466,7 +453,7 @@ Session ID: 50169142472e23ab3878dbc42a3bf029
 </div></div>
 <script>
 var timeline = {
-"booksStoreE2E":18.284,"booksStoreE2E":11.783,"booksStoreE2E":28.204
+"booksStoreE2E":13.163,"booksStoreE2E":8.531,"booksStoreE2E":8.633
 };
 </script>
 <div class="row">
