--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">DEMOQA Reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 25, 2023 01:09:19 AM</span></a>
+<a href="#"><span class="badge badge-primary">Sep 25, 2023 01:33:20 AM</span></a>
 </li>
 </ul>
 </div>
@@ -45,6 +45,11 @@
 <li class="nav-item dropdown" onclick="toggleView('test-view')">
 <a id="nav-test" class="dropdown-toggle" href="#">
 <span class="ico"><i class="fa fa-list"></i></span>
+</a>
+</li>
+<li class="nav-item dropdown" onclick="toggleView('category-view')">
+<a id="nav-category" class="dropdown-toggle" href="#">
+<span class="ico"><i class="fa fa-tag"></i></span>
 </a>
 </li>
 <li class="nav-item dropdown" onclick="toggleView('dashboard-view')">
@@ -72,17 +77,23 @@
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
 </li>
+<li class="dropdown">
+<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
+<ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
+<a class="dropdown-item" href="#">API</a>
+</ul>
+</li>
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
         <li class="test-item"  status="skip" test-id="1"
           author=""
-          tag=""
+          tag="API"
           device="">
           <div class="test-detail">
             <p class="name">createUser</p>
             <p class="text-sm">
-              <span>1:09:21 AM</span> / <span>00:00:00:006</span>
+              <span>1:33:23 AM</span> / <span>00:00:00:011</span>
               <span class="badge skip-bg log float-right">Skip</span>
             </p>
           </div>
@@ -91,13 +102,14 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-skip">createUser</h5>
-<span class='badge badge-success'>09.25.2023 1:09:21 AM</span>
-<span class='badge badge-danger'>09.25.2023 1:09:21 AM</span>
-<span class='badge badge-default'>00:00:00:006</span>
+<span class='badge badge-success'>09.25.2023 1:33:23 AM</span>
+<span class='badge badge-danger'>09.25.2023 1:33:23 AM</span>
+<span class='badge badge-default'>00:00:00:011</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
+<div class="m-t-15"><span class="badge badge-pill badge-default">API</span></div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -105,7 +117,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>1:09:21 AM</td>
+        <td>1:33:23 AM</td>
         <td>
           createUser re-run test skipped
         </td>
@@ -117,12 +129,12 @@
         </li>
         <li class="test-item"  status="skip" test-id="2"
           author=""
-          tag=""
+          tag="API"
           device="">
           <div class="test-detail">
             <p class="name">createUser</p>
             <p class="text-sm">
-              <span>1:09:21 AM</span> / <span>00:00:00:001</span>
+              <span>1:33:23 AM</span> / <span>00:00:00:003</span>
               <span class="badge skip-bg log float-right">Skip</span>
             </p>
           </div>
@@ -131,13 +143,14 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-skip">createUser</h5>
-<span class='badge badge-success'>09.25.2023 1:09:21 AM</span>
-<span class='badge badge-danger'>09.25.2023 1:09:21 AM</span>
-<span class='badge badge-default'>00:00:00:001</span>
+<span class='badge badge-success'>09.25.2023 1:33:23 AM</span>
+<span class='badge badge-danger'>09.25.2023 1:33:23 AM</span>
+<span class='badge badge-default'>00:00:00:003</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
+<div class="m-t-15"><span class="badge badge-pill badge-default">API</span></div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -145,7 +158,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log skip-bg">Skip</span></td>
-        <td>1:09:21 AM</td>
+        <td>1:33:23 AM</td>
         <td>
           createUser re-run test skipped
         </td>
@@ -157,12 +170,12 @@
         </li>
         <li class="test-item"  status="pass" test-id="3"
           author=""
-          tag=""
+          tag="API"
           device="">
           <div class="test-detail">
             <p class="name">createUser</p>
             <p class="text-sm">
-              <span>1:09:21 AM</span> / <span>00:00:00:000</span>
+              <span>1:33:23 AM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -171,13 +184,14 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">createUser</h5>
-<span class='badge badge-success'>09.25.2023 1:09:21 AM</span>
-<span class='badge badge-danger'>09.25.2023 1:09:21 AM</span>
+<span class='badge badge-success'>09.25.2023 1:33:23 AM</span>
+<span class='badge badge-danger'>09.25.2023 1:33:23 AM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
+<div class="m-t-15"><span class="badge badge-pill badge-default">API</span></div>
 </div>
 </div>          </div>
         </li>
@@ -190,18 +204,83 @@
 </div>
 <div class="test-content-detail"><div class="detail-body"></div></div>
 </div></div>
-<div class="container-fluid p-4 view dashboard-view">
+<div class="test-wrapper row view category-view attributes-view">
+<div class="test-list">
+<div class="test-list-tools">
+<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
+</div>
+<div class="test-list-wrapper scrollable">
+<ul class="test-list-item">
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>1</span>
+<span class='badge log badge-skip'>2</span>
+</span>
+<p class="name">API</p>
+<p class="duration text-sm">3 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>API</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
+<span status="skip" class='badge log badge-skip'>2 skipped</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="skip">
+<td><span class="badge log skip-bg">Skip</span></td>
+<td>01:33:23 AM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='1'>createUser</a>
+</td>
+</tr>
+<tr class="tag-test-status" status="skip">
+<td><span class="badge log skip-bg">Skip</span></td>
+<td>01:33:23 AM</td>
+<td>
+<a href="#" class="linked" test-id='2' id='2'>createUser</a>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>01:33:23 AM</td>
+<td>
+<a href="#" class="linked" test-id='3' id='3'>createUser</a>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="test-content scrollable">
+<div class="test-content-detail">
+<div class="detail-body"></div>
+</div>
+</div>
+</div><div class="container-fluid p-4 view dashboard-view">
 <div class="row">
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 25, 2023 01:09:19 AM</h3>
+<h3>Sep 25, 2023 01:33:20 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 25, 2023 01:09:21 AM</h3>
+<h3>Sep 25, 2023 01:33:23 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -271,10 +350,27 @@
 </div></div>
 <script>
 var timeline = {
-"createUser":0.006,"createUser":0.001,"createUser":0
+"createUser":0.011,"createUser":0.003,"createUser":0
 };
 </script>
 <div class="row">
+<div class="col-lg-6 col-md-12 category-container">
+<div class="card">
+<div class="card-header"><p>Tags</p></div>
+<div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
+<thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
+<tr>
+<td>API</td>
+<td>1</td>
+<td>0</td>
+<td>2</td>
+<td>0</td>
+<td>33.333%</td>
+</tr>
+</tbody>
+</table></div>
+</div>
+</div>
 <div class="col-lg-6 col-md-12 sysenv-container">
 <div class="card">
 <div class="card-header"><p>System/Environment</p></div>
